add login entered

--- a/app/src/styles/card.less
+++ b/app/src/styles/card.less
@@ -115,5 +115,14 @@
 			border: 1px solid @blue;
 		}
 	}
+
+	&__small-link {
+		display: flex;
+		justify-content: center;
+		
+		a {
+			color: #222;
+		}
+	}
 }
 
