--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -11,6 +11,46 @@
 	background-color: #EEE;
 	position: fixed;
 	z-index: 5;
+	padding: 10px 0;
+
+	&__links {
+		float: right;
+		margin-right: 10px;
+		height: 80%;
+		display: flex;
+
+		&::after {
+			content: '';
+			clear: both;
+		}
+	}
+
+	&__link {
+		height: 100%;
+		margin-right: 20px;
+		min-width: 130px;
+		border-radius: 20px;
+		border: 2px solid #222;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 18px;
+		font-family: Roboto, sans-serif;
+	}
+
+	a&__link {
+		text-decoration: none;
+		color: #000;
+		transition: .5s;
+
+		&:hover {
+			box-shadow: 0 5px 10px rgba(0,0,0,0.15), 0 4px 4px rgba(0,0,0,0.12);
+		}
+	}
+
+	div&__link {
+		background-color: #C9C9C9FF;
+	}
 }
 
 .content {
@@ -24,6 +64,7 @@
 	position: fixed;
 	animation: show_error 1.5s forwards;
 	top: @heder_heigth + 20px;
+	right: 30px;
 	min-width: 300px;
 	max-width: 350px;
 	min-height: 100px;
@@ -84,10 +125,10 @@
 
 @keyframes show_error {
 	0% {
-		right: -400px;
+		opacity: 0;
 	}
 
 	100% {
-		right: 10px;
+		opacity: 1;
 	}
 }
