--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -8,6 +8,60 @@
   background-color: #EEE;
   position: fixed;
   z-index: 5;
+  padding: 10px 0;
+}
+.header__links {
+  float: right;
+  margin-right: 10px;
+  height: 80%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header__links::after {
+  content: '';
+  clear: both;
+}
+.header__link {
+  height: 100%;
+  margin-right: 20px;
+  min-width: 130px;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+  border: 2px solid #222;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+     -moz-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 18px;
+  font-family: Roboto, sans-serif;
+}
+a.header__link {
+  text-decoration: none;
+  color: #000;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+a.header__link:hover {
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.12);
+}
+div.header__link {
+  background-color: #C9C9C9FF;
 }
 .content {
   width: 100%;
@@ -23,6 +77,7 @@
        -o-animation: show_error 1.5s forwards;
           animation: show_error 1.5s forwards;
   top: 80px;
+  right: 30px;
   min-width: 300px;
   max-width: 350px;
   min-height: 100px;
@@ -85,25 +140,25 @@
 }
 @-webkit-keyframes show_error {
   0% {
-    right: -400px;
+    opacity: 0;
   }
   100% {
-    right: 10px;
+    opacity: 1;
   }
 }
 @-o-keyframes show_error {
   0% {
-    right: -400px;
+    opacity: 0;
   }
   100% {
-    right: 10px;
+    opacity: 1;
   }
 }
 @keyframes show_error {
   0% {
-    right: -400px;
+    opacity: 0;
   }
   100% {
-    right: 10px;
+    opacity: 1;
   }
 }
