--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -12,16 +12,11 @@
 </head>
 <body>
     {% if not no_header %}
-        <div class="header"></div>
+        {% include('base/modules/header.html') %}
     {% endif %}
-    <div class="error" id="errorMessage">
-        <div class="error__header">
-            <div class="error__header_close" id="closeErrorMessage"></div>
-            <div class="error__header_text">Ошибка</div>
-        </div>
-        <div class="error__content"></div>
-    </div>
-    <script src="{{ url_for('static', filename='js/error_message.js') }}"></script>
+    {% if error %}
+        {% include('base/modules/error.html') %}
+    {% endif %}
     <div class="content">
         {% block content %}{% endblock %}
     </div>
