--- a/app/templates/base/card.html
+++ b/app/templates/base/card.html
@@ -3,6 +3,7 @@
 {% block title %}Card{% endblock %}
 
 {% block links %}
+{{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/card.css') }}">
 {% endblock %}
 
