--- a/app/src/styles/card.less
+++ b/app/src/styles/card.less
@@ -54,6 +54,12 @@
 		&::after {
 			content: ':';
 		}
+
+		&_small {
+			font-size: 16px;
+			line-height: 34px;
+			margin-bottom: 2px;
+		}
 	}
 
 	&__input {
@@ -123,6 +129,11 @@
 		a {
 			color: #222;
 		}
+	}
+
+	&__flex-block {
+		display: flex;
+		margin-bottom: 20px;
 	}
 }
 
