--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,164 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-.header {
-  width: 100vw;
-  height: 60px;
-  background-color: #EEE;
-  position: fixed;
-  z-index: 5;
-  padding: 10px 0;
-}
-.header__links {
-  float: right;
-  margin-right: 10px;
-  height: 80%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.header__links::after {
-  content: '';
-  clear: both;
-}
-.header__link {
-  height: 100%;
-  margin-right: 20px;
-  min-width: 130px;
-  -webkit-border-radius: 20px;
-          border-radius: 20px;
-  border: 2px solid #222;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-     -moz-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-     -moz-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 18px;
-  font-family: Roboto, sans-serif;
-}
-a.header__link {
-  text-decoration: none;
-  color: #000;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-}
-a.header__link:hover {
-  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.12);
-          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.12);
-}
-div.header__link {
-  background-color: #C9C9C9FF;
-}
-.content {
-  width: 100%;
-  height: 100vh;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding-top: 80px;
-}
-.error {
-  position: fixed;
-  -webkit-animation: show_error 1.5s forwards;
-       -o-animation: show_error 1.5s forwards;
-          animation: show_error 1.5s forwards;
-  top: 80px;
-  right: 30px;
-  min-width: 300px;
-  max-width: 350px;
-  min-height: 100px;
-  background-color: #CCC;
-  -webkit-border-radius: 20px;
-          border-radius: 20px;
-  overflow: hidden;
-}
-.error__header {
-  position: relative;
-  margin-bottom: 20px;
-}
-.error__header_text {
-  text-align: center;
-  line-height: 40px;
-  font-weight: bold;
-}
-.error__header_close {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
-.error__header_close:hover::before,
-.error__header_close:hover::after {
-  background-color: #b00;
-}
-.error__header_close::after,
-.error__header_close::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 80%;
-  height: 2px;
-  background-color: #222;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-}
-.error__header_close::before {
-  -webkit-transform: translate(-50%, -50%) rotate(45deg);
-      -ms-transform: translate(-50%, -50%) rotate(45deg);
-       -o-transform: translate(-50%, -50%) rotate(45deg);
-          transform: translate(-50%, -50%) rotate(45deg);
-}
-.error__header_close::after {
-  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
-      -ms-transform: translate(-50%, -50%) rotate(-45deg);
-       -o-transform: translate(-50%, -50%) rotate(-45deg);
-          transform: translate(-50%, -50%) rotate(-45deg);
-}
-.error__content {
-  padding: 5px 10px;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-@-webkit-keyframes show_error {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-o-keyframes show_error {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes show_error {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+@-webkit-keyframes show_error{0%{opacity:0}to{opacity:1}}@-o-keyframes show_error{0%{opacity:0}to{opacity:1}}@keyframes show_error{0%{opacity:0}to{opacity:1}}*{margin:0;padding:0}.header{width:100vw;height:60px;background-color:#eee;position:fixed;z-index:5;padding:10px 0}.header__link,.header__links{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex}.header__links{float:right;margin-right:10px;height:80%}.header__links::after{content:'';clear:both}.header__link{height:100%;margin-right:20px;min-width:130px;-webkit-border-radius:20px;border-radius:20px;border:2px solid #222;-webkit-box-align:center;-webkit-align-items:center;-moz-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-moz-box-pack:center;-ms-flex-pack:center;justify-content:center;font-size:18px;font-family:Roboto,sans-serif}a.header__link{text-decoration:none;color:#000;-webkit-transition:.5s;-o-transition:.5s;transition:.5s}a.header__link:hover{-webkit-box-shadow:0 5px 10px rgba(0,0,0,.15),0 4px 4px rgba(0,0,0,.12);box-shadow:0 5px 10px rgba(0,0,0,.15),0 4px 4px rgba(0,0,0,.12)}div.header__link{background-color:#c9c9c9ff}.content{width:100%;height:100vh;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding-top:80px}.error{position:fixed;-webkit-animation:show_error 1.5s forwards;-o-animation:show_error 1.5s forwards;animation:show_error 1.5s forwards;top:80px;right:30px;min-width:300px;max-width:350px;min-height:100px;background-color:#ccc;-webkit-border-radius:20px;border-radius:20px;overflow:hidden}.error__header{position:relative;margin-bottom:20px}.error__header_text{text-align:center;line-height:40px;font-weight:700}.error__header_close{position:absolute;right:5px;top:5px;width:30px;height:30px;cursor:pointer}.error__header_close:hover::after,.error__header_close:hover::before{background-color:#b00}.error__header_close::after,.error__header_close::before{content:'';position:absolute;top:50%;left:50%;width:80%;height:2px;background-color:#222;-webkit-transition:.5s;-o-transition:.5s;transition:.5s}.error__header_close::before{-webkit-transform:translate(-50%,-50%) rotate(45deg);-ms-transform:translate(-50%,-50%) rotate(45deg);-o-transform:translate(-50%,-50%) rotate(45deg);transform:translate(-50%,-50%) rotate(45deg)}.error__header_close::after{-webkit-transform:translate(-50%,-50%) rotate(-45deg);-ms-transform:translate(-50%,-50%) rotate(-45deg);-o-transform:translate(-50%,-50%) rotate(-45deg);transform:translate(-50%,-50%) rotate(-45deg)}.error__content{padding:5px 10px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
