change logo for admin page

--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -36,6 +36,13 @@
 		justify-content: center;
 		font-size: 18px;
 		font-family: Roboto, sans-serif;
+
+		&_admin {
+			border: none;
+			border-radius: 0;
+			min-width: 0;
+			width: min-content;
+		}
 	}
 
 	a&__link {
@@ -50,6 +57,10 @@
 
 	div&__link {
 		background-color: #C9C9C9FF;
+	}
+
+	&__admin_image {
+		height: 100%;
 	}
 }
 
