--- a/app/templates/base/modules/header.html
+++ b/app/templates/base/modules/header.html
@@ -1,6 +1,6 @@
 {% set header_links = [
     {'name': 'index', 'title': 'Домашняя', 'href': url_for('index')},
-    {'name': 'register', 'title': 'Регистрация', 'href': url_for('register'), 'target': true},
+    {'name': 'register', 'title': 'Регистрация', 'href': url_for('register'), 'target': true, 'notAction': Mage().action_user()},
     {'name': 'login', 'title': 'Вход', 'href': url_for('login'), 'notAction': Mage().action_user()}
 ] %}
 
@@ -22,7 +22,7 @@
 
         {% if Mage().action_user() %}
             {% if name == 'admin' %}
-                <div class="header__link header__link_admin">
+                <div class="header__link header__link_admin" id="iconAdmin">
                     <img
                         src="{{url_for('static', filename='img/user.svg')}}"
                         alt="Личный кабинет"
@@ -33,6 +33,7 @@
                 <a
                     class="header__link header__link_admin"
                     href="{{ url_for('admin') }}"
+                    id="iconAdmin"
                 >
                     <img
                         src="{{url_for('static', filename='img/user.svg')}}"
@@ -41,6 +42,17 @@
                     />
                 </a>
             {% endif %}
+            <script src="{{ url_for('static', filename='js/popup.js') }}"></script>
+            <script>
+                var popup = {
+                    element: document.querySelector('#iconAdmin'),
+                    li: [
+                        {title: 'Мой профиль', url: '{{ url_for("admin") }}'}
+                    ]
+                };
+
+                new Popup(popup);
+            </script>
         {% endif %}
     </div>
 </header>
