--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,9 +4,7 @@
 {% set cardTitle = 'Registration' %}
 
 {% set inputs = [
-	{"title": "Ваше имя", "name": "name", "placeholder": "Иванов К.И."},
-	{"title": "Пароль", "name": "password", "type": "password"},
-	{"title": "Ваша почта", "name": "email", "type": "email", "placeholder": "uearemail@mail.com"}
+	{"title": "Ваше имя", "name": "name", "placeholder": "Иванов К.И."}
 ] %}
 
 {% set select = [
