--- a/app/templates/base/modules/socket.html
+++ b/app/templates/base/modules/socket.html
@@ -1,4 +1,4 @@
-<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script src="{{ url_for('static', filename='lib/js/socket.io.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/socket.js') }}"></script>
 <script>
 	var socket = new Socket();
