--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -3,6 +3,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: Roboto, sans-serif;
 }
 
 .header {
@@ -59,7 +60,7 @@
 	}
 
 	div&__link {
-		background-color: @color_blue;
+		background-color: @color_darkblue;
 		color: #fff;
 		cursor: default;
 	}
