--- a/app/src/styles/message.less
+++ b/app/src/styles/message.less
@@ -16,7 +16,6 @@
 
 	&__title {
 		text-align: center;
-		font-family: Roboto, sans-serif;
 		font-size: 20px;
 		line-height: 40px;
 		margin-bottom: 10px;
@@ -25,5 +24,18 @@
 	&__text {
 		font-size: 18px;
 		line-height: 25px;
+		margin-bottom: 10px;
+
+		&_center {
+			text-align: center;
+		}
+
+		&_middle-margin {
+			margin-bottom: 20px;
+		}
+	}
+
+	&__undertext {
+		font-weight: bold;
 	}
 }
