update design login form

--- a/app/src/styles/card.less
+++ b/app/src/styles/card.less
@@ -133,6 +133,12 @@
 	&__flex-block {
 		display: flex;
 		margin-bottom: 20px;
+		justify-content: space-between;
+	}
+
+	&__flex_element {
+		width: 95%;
+		margin: 5px;
 	}
 }
 
