--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -85,18 +85,21 @@
 	min-width: 300px;
 	max-width: 350px;
 	min-height: 100px;
-	background-color: #CCC;
-	border-radius: 20px;
+	border-radius: 10px;
 	overflow: hidden;
+	background-color: #fff;
+	box-shadow: 0 5px 10px rgba(0,0,0,0.15), 0 4px 4px rgba(0,0,0,0.12);
 
 	&__header {
 		position: relative;
 		margin-bottom: 20px;
+		background-color: @color_blue;
 
 		&_text {
 			text-align: center;
 			line-height: 40px;
 			font-weight: bold;
+			color: #fff;
 		}
 
 		&_close {
@@ -137,7 +140,13 @@
 	&__content {
 		padding: 5px 10px;
 		box-sizing: border-box;
+		display: flex;
+		justify-content: center;
 	}
+}
+
+.js-dragAndDrop {
+	display: none;
 }
 
 @keyframes show_error {
