--- a/app/templates/base/modules/error.html
+++ b/app/templates/base/modules/error.html
@@ -1,8 +1,10 @@
 <div class="error" id="errorMessage">
     <div class="error__header">
         <div class="error__header_close" id="closeErrorMessage"></div>
-        <div class="error__header_text">Ошибка</div>
+        <div class="error__header_text">Ошибка!</div>
     </div>
-    <div class="error__content"></div>
+    <div class="error__content">
+    	{{ error }}
+    </div>
 </div>
 <script src="{{ url_for('static', filename='js/error_message.js') }}"></script>
