--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,12 @@
 {% extends 'base/card.html' %}
 
 {% block title %}LogIn{% endblock %}
-{% set cardTitle = 'Log in' %}
+{% set cardTitle = 'Авторизация' %}
 
-{% set inputs = [
-	{"title": "Ваша адресс", "name": "address", "placeholder": "********"}
-] %}
+{% block links %}
+	{{ super() }}
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/dragAndDrop.css') }}">
+{% endblock %}
 
 {% set blocks_key = [
 	{'name': 'publicKey', 'title': 'Публичный ключ'},
@@ -14,18 +15,10 @@
 
 {% block card %}
 <form action="/todo/login" method="POST" id="login" enctype="multipart/form-data">
-	{% for inp in inputs %}
-		<div class="card__enter-data">
-			<input
-				class="card__input"
-				type="{{ inp.type or 'text' }}"
-				name="{{ inp.name }}"
-				autocomplete="disable"
-				{{ inp.placeholder and "placeholder=" + inp.placeholder }}
-			/>
-			<label class="card__label" for="{{ inp.name }}">{{ inp.title }}</label>
-		</div>
-	{% endfor %}
+	<div class="card__enter-data">
+		<div id="drAndDrAdress"></div>
+		<p class="card__label">Ваш адрес</p>	
+	</div>
 
 	<p class="card__label">Ключи</p>
 	<div id="addKeysBlock">
@@ -33,7 +26,7 @@
 		{% for key in blocks_key %}
 			<div class="card__flex_element">
 				<label class="card__label card__label_small" for="{{key.name}}">{{key.title}}</label>
-				<input type="file" name="{{key.name}}" multiple/>
+				<div id="drAndDr{{key.name}}"></div>
 			</div>
 		{% endfor %}
 		</div>
@@ -47,4 +40,12 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dragAndDrop.js') }}"></script>
+<script>
+	new DragAndDrop('address', 'Загрузите ваш адресс', document.querySelector('#drAndDrAdress'));
+
+	{% for key in blocks_key %}
+	new DragAndDrop('{{key.name}}', 'Загрузите ключ', document.querySelector('#drAndDr{{key.name}}'));
+	{% endfor %}
+</script>
 {% endblock %}
