--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base/card.html' %}
 
 {% block title %}Registration{% endblock %}
-{% set cardTitle = 'Registration' %}
+{% set cardTitle = 'Регистрация' %}
 
 {% set inputs = [
 	{"title": "Ваше имя", "name": "name", "placeholder": "Иванов К.И."}
