finish login and register

--- a/app/src/styles/card.less
+++ b/app/src/styles/card.less
@@ -123,10 +123,13 @@
 
 	&__small-link {
 		display: flex;
-		justify-content: center;
+		flex-direction: column;
+		align-items: center;
 		
 		a {
 			color: #222;
+			display: block;
+			margin-bottom: 5px;
 		}
 	}
 
