--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -14,10 +14,12 @@
 			<button class="resume__link">Изменить</button>
 		</div>
 	</div>
-	<div class="column colunt_medium">
+	<div class="column colunt_medium column_radius">
 		<div class="resume__main-info">
 			<h1 class="resume__title">Личная информация</h1>
-			<div class="resume__main-info-i"></div>
+			<div class="resume__main-info-i">
+				
+			</div>
 		</div>
 	</div>
 </div>
