--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -34,6 +34,7 @@
 	<input type="submit" class="card__bth" id="cardAction" value="Отправить" />
 	<div class="card__small-link">
 		<a href="{{ url_for('index') }}">На главную</a>
+		<a href="{{ url_for('register') }}">Зарегистрироваться</a>
 	</div>
 </form>
 {% endblock %}
