--- a/app/src/styles/admin.less
+++ b/app/src/styles/admin.less
@@ -60,6 +60,11 @@
 .column {
 	padding: 5px;
 	box-sizing: border-box;
+	background-color: #EEE;
+
+	&_radius {
+		border-radius: 10px;
+	}
 }
 
 .column_small {
