--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -72,7 +72,7 @@
 
 .content {
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	box-sizing: border-box;
 	padding-top: @heder_heigth + 20px;
 }
