--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -75,6 +75,7 @@
 	min-height: 100vh;
 	box-sizing: border-box;
 	padding-top: @heder_heigth + 20px;
+	background-color: rgb(250, 250, 250);
 }
 
 .error {
@@ -88,6 +89,7 @@
 	border-radius: 10px;
 	overflow: hidden;
 	background-color: #fff;
+	z-index: 7;
 	box-shadow: 0 5px 10px rgba(0,0,0,0.15), 0 4px 4px rgba(0,0,0,0.12);
 
 	&__header {
