create form redaction

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -53,7 +53,7 @@
 	</div>
 	<div class="column column_medium">
 		<div class="card card_radius card_margin">
-			<h1 class="resume__title">Обо мне</h1>
+			<h1 class="card__title">Обо мне</h1>
 			<div class="resume__card-body">
 				{% if not data.get('about_us') %}
 				<div class="resume__card_no-content">
