--- a/app/src/styles/admin.less
+++ b/app/src/styles/admin.less
@@ -12,17 +12,6 @@
 	max-width: 100%;
 	margin: auto;
 
-	&__title {
-		text-align: center;
-		font-weight: bold;
-		font-size: 28px;
-		letter-spacing: 3px;
-		color: #4a4a4a;
-		margin-bottom: 20px;
-		line-height: 40px;
-		border-bottom: 2px solid #D3D3D3FF;
-	}
-
 	&__element {
 		border-bottom: 2px solid #D3D3D3FF;
 		width: 100%;
@@ -144,6 +133,7 @@
 }
 
 .column {
+	margin-bottom: 50px;
 
 	&_small {
 		width: 27%;
@@ -156,6 +146,10 @@
 	&_medium {
 		width: 72%;
 	}
+
+	&_big {
+		width: 100%;
+	}
 }
 
 .card {
@@ -166,6 +160,23 @@
 	box-sizing: border-box;
 	background-color: #fff;
 	box-shadow: 0 5px 10px rgba(0,0,0,0.15), 0 4px 4px rgba(0,0,0,0.12);
+
+	&__title {
+		text-align: center;
+		font-weight: bold;
+		font-size: 28px;
+		letter-spacing: 3px;
+		color: #4a4a4a;
+		margin-bottom: 20px;
+		line-height: 40px;
+		border-bottom: 2px solid #D3D3D3FF;
+		width: 100%;
+	}
+
+	&__body {
+		margin-top: 50px;
+		width: 70%;
+	}
 
 	&_radius {
 		border-radius: 10px;
