--- a/app/src/styles/edit_profile.less
+++ b/app/src/styles/edit_profile.less
@@ -28,6 +28,58 @@
 			border-radius: 50%;
 			overflow: hidden;
 		}
+
+		&_medium {
+			width: 140px;
+			height: 140px;
+		}
+
+		&_margin {
+			margin-bottom: 20px;
+		}
+	}
+
+	&__action-block {
+		margin-top: 20px;
+	}
+
+	&__bth {
+		width: 150px;
+		height: 50px;
+		border: none;
+		outline: none;
+		cursor: pointer;
+		border-radius: 10px;
+		transition: .5s;
+		font-size: 18px;
+
+		&_action {	
+			background-color: @color_blue;
+			color: #fff;
+
+			&:hover {
+				background-color: @color_darkblue;
+			}
+		}
+
+		&_remove {
+			background-color: #eee;
+			color: #222;
+
+			&:hover {
+				background-color: #aaa;
+				color: #fff;
+			}
+		}
+
+		&_margin {
+			margin: 10px;
+		}
+
+		&_center {
+			display: block;
+			margin: auto;
+		}
 	}
 }
 
@@ -57,6 +109,110 @@
 
 		&:hover {
 			background-color: #eee;
+		}
+	}
+}
+
+.card {
+	&__redaction {
+		margin-bottom: 50px;
+
+		&_label {
+			width: 100%;
+			display: block;
+			color: #222;
+			line-height: 35px;
+			font-weight: bold;
+			font-size: 22px;
+			margin-bottom: 10px;
+		}
+
+		&_text {
+			width: 100%;
+			line-height: 30px;
+			font-size: 20px;
+			color: #222;
+			outline: none;
+			border: none;
+			background-color: #eee;
+			padding: 3px 10px;
+			box-sizing: border-box;
+			//border-bottom: 1px solid rgb(120, 120, 120, .8);
+			transition: .5s;
+
+			// &:hover:not(:focus)
+			// &:hover:not(:active), {
+			// 	border-bottom: 1px solid @color_blue;
+			// }
+
+			// &:focus,
+			// &:active {
+			// 	border-bottom: 1px solid @color_darkblue;
+			// }
+		}
+
+		&_select-radio_body {
+			position: relative;
+			margin-bottom: 20px;
+		}
+
+		&_radio {
+			-webkit-appearance: none;
+      		-moz-appearance: none;
+    		appearance: none;
+    		position: absolute;
+
+    		&_label {
+    			padding-left: 25px;
+    			font-size: 18px;
+    			color: #222;
+    			cursor: pointer;
+
+    			&::before {
+    				content: "";
+    				display: block;
+    				width: 16px;
+    				height: 16px;
+    				border: 1px solid #ccc;
+    				background-color: #fff;
+    				border-radius: 50%;
+    				position: absolute;
+    				top: 0;
+    				left: 0;
+      				z-index: 1;
+    				transition: border .1s linear;
+    			}
+
+    			&::after {
+    				content: "";
+    				display: block;
+    				width: 12px;
+    				height: 12px;
+    				background-color: @color_blue;
+    				border-radius: 50%;
+    				opacity: 0;
+    				position: absolute;
+    				top: 3px;
+    				left: 3px;
+    				z-index: 2;
+    				transition: opacity .1s linear;
+    			}
+    		}
+
+    		&:checked + &_label::before {
+    			border-color: @color_darkblue;
+    		}
+
+    		&:checked + &_label::after {
+    			opacity: 1;
+    		}
+		}
+
+		&_about_us {
+			box-shadow: 0 5px 10px rgba(0,0,0,0.15), 0 4px 4px rgba(0,0,0,0.12);
+			margin-bottom: 50px;
+			padding: 10px;
+			box-sizing: border-box;
 		}
 	}
 }
