--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -6,6 +6,28 @@
 	font-family: Roboto, sans-serif;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 10em white inset !important;
+  -webkit-text-fill-color: yellow !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-animation: autofill 0s forwards;
+}
+
+@-webkit-keyframes autofill {
+  100% {
+    background: transparent;
+    color: inherit;
+  }
+}
+
 .header {
 	width: 100vw;
 	height: @heder_heigth;
