--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -2,7 +2,8 @@
 
 {% block title %}Admin{% endblock %}
 
-{% set user_photo = data.get('user_photo') %}
+{% set main_info = data.get('main_info') %}
+{% set user_photo = main_info.get('user_photo') %}
 
 {% block links %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
@@ -20,11 +21,13 @@
 					<img class="resume__photo-image" src="{{ url_for('static', filename='img/man.svg') }}" alt="User photo">
 					{% endif %}
 				</div>
-				{% if data.get('role') %}
+				{% if main_info.get('role') %}
 				<div class="resume__text resume__text_small resume__text_center">
-					{{ 'Компания' if data.get('role') == 1 else 'Пользователь' }}
+					{{ 'Компания' if main_info.get('role') == 1 else 'Пользователь' }}
 				</div>
-				<div class="resume__text resume__text_ellips resume__text_center">{{ data.get('name') }}</div>
+				<div class="resume__text resume__text_ellips resume__text_center">
+					{{ main_info.get('name') }}
+				</div>
 				{% endif %}
 			</div>
 			<div class="resume__element">
@@ -33,21 +36,29 @@
 			</div>
 			{% if data.get('public_info') %}
 			{% set public_info = data.get('public_info') %}
+			{% for name_info, info in public_info.items() %}
 			<div class="resume__element">
-				{% if public_info.get('age') %}
-				<h2 class="resume__subtitle">Возраст и пол</h2>
+				<h2 class="resume__subtitle">{{ info.get('title') }}</h2>
+				{% for name, row_item in info.get('props').items() %}
+				{% if not row_item.get('no_show') %}
 				<div class="resume__row">
-					<div class="resume__row_label">Возраст</div>
-					<div class="resume__row_value">{{ public_info.get('age') }}</div>
-				</div>
-				<div class="resume__row">
-					<div class="resume__row_label">Пол</div>
-					<div class="resume__row_value">{{ 'Мужской' 
-					if not public_info.get('gender') or public_info.get('gender') == 'm'
-					else 'Женский' }}</div>
+					<div class="resume__row_label">{{ row_item.get('title') }}</div>
+					<div class="resume__row_value">
+						{% if row_item.get('value') %}
+							{% if row_item.get('description') %}
+								{{ row_item.get('description').get(row_item.get('value')) }}
+							{% else %}
+								{{ row_item.get('value') }}
+							{% endif %}
+						{% else %}
+						-
+						{% endif %}
+					</div>
 				</div>
 				{% endif %}
+				{% endfor %}
 			</div>
+			{% endfor %}
 			{% endif %}
 		</div>
 	</div>
@@ -63,6 +74,15 @@
 					<a 	href="{{ url_for('admin_edit', menu='public_info') }}"
 						class="resume__button resume__button_margin">Дополнить резюме</a>
 				</div>
+				{% else %}
+				<div class="resume__card_about-us" id="aboutAs"></div>
+				<script src="{{ url_for('static', filename='js/parse_description.js') }}"></script>
+				<script>
+					new ParseDescription({
+						el: '#aboutAs',
+						obj: '{{ data['about_us'] }}'
+					})
+				</script>
 				{% endif %}
 			</div>
 		</div>
