--- a/app/templates/admin_edit.html
+++ b/app/templates/admin_edit.html
@@ -2,6 +2,13 @@
 
 {% block title %}Edit{% endblock %}
 
+{% set main_info = data.get('main_info') %}
+{% set public_info = data.get('public_info') %}
+
+{% set conf = config.get('public_info') %}
+
+{% set user_photo = main_info.get('user_photo') %}
+
 {% block links %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/edit_profile.css') }}">
@@ -23,9 +30,9 @@
 			</div>
 			<div class="user__name">
 				<div class="resume__text resume__text_small resume__text_center">
-					{{ 'Компания' if data.get('role') == 1 else 'Пользователь' }}
+					{{ 'Компания' if main_info.get('role') == 1 else 'Пользователь' }}
 				</div>
-				<div class="resume__text resume__text_ellips resume__text_center">{{ data.get('name') }}</div>
+				<div class="resume__text resume__text_ellips resume__text_center">{{ main_info.get('name') }}</div>
 			</div>
 		</div>
 		<div class="card card_radius card_no-padding">
@@ -66,41 +73,63 @@
 		</div>
 		<div class="card card_radius card_center">
 			<div class="card__title">Редактирование информации</div>
-			<div class="card__body">
-				{% for item_name, item_config in config["public_info"].items() %}
-				{% if item_config["type"] == 'text' %}
-				<div class="card__redaction">
-					<label for="{{ item_name }}"class="card__redaction_label">
-						{{ item_config["title"].encode('cp1251').decode('utf-8') }}
-					</label>
-					<input type="text"class="card__redaction_text"
-						value="{{ data[item_name] or item_config['default'] }}"
-						{% for attr, value in item_config['attr'].items() %}
-						{{attr}}="{{value}}"
-						{% endfor %}
-					/>
-				</div>
-				{% elif item_config["type"] == 'select radio' %}
-				<div class="card__redaction card__redaction_select-radio">
-					<h2 class="card__redaction_label">
-						{{ item_config["title"].encode('cp1251').decode('utf-8') }}
-					</h2>
-					{% for items in item_config["values"] %}
-					<div class="card__redaction_select-radio_body">
-						<input type="radio" id="{{ item_name }}_{{ items['value'] }}"
-							class="card__redaction_radio"
-							name="{{ item_name }}"
-							{% if items['value'] == item_config['default'] %}checked{% endif %}
-						/>
-						<label for="{{ item_name }}_{{ items['value'] }}"
-							class="card__redaction_radio_label"
-						>
-							{{ items['title'].encode('cp1251').decode('utf-8') }}
+			<div class="card__body" id="formUser">
+				{% for section_name, section_data in public_info.items() %}
+				{% set elems_form = section_data.get('props') %}
+				{% for name, value_obj in elems_form.items() %}
+					{% set value = value_obj.get('value') %}
+					{% if conf[name].get('type') == 'text' %}
+					<div class="card__redaction" data-name="{{ section_name }}">
+						<label for="{{ name }}"class="card__redaction_label">
+							{{ conf[name]["title"].encode('cp1251').decode('utf-8') }}
 						</label>
+						<input type="text"
+							class="card__redaction_text jsInputForm"
+							value="{{ value or conf[name]['default'] }}"
+							name="{{ name }}"
+							{% for attr, value in conf[name]['attr'].items() %}
+							{{attr}}="{{value}}"
+							{% endfor %}
+						/>
 					</div>
-					{% endfor %}
-				</div>
-				{% endif %}
+					{% elif conf[name].get('type') == 'select radio' %}
+					<div class="card__redaction card__redaction_select-radio" data-name="{{ section_name }}">
+						<h2 class="card__redaction_label">
+							{{ conf[name]["title"].encode('cp1251').decode('utf-8') }}
+						</h2>
+						{% for items in conf[name]["values"] %}
+						<div class="card__redaction_select-radio_body">
+							<input type="radio"
+								id="{{ name }}_{{ items['value'] }}"
+								class="card__redaction_radio jsInputForm"
+								name="{{ name }}"
+								value="{{ items['value'] }}"
+								{% if items['value'] == conf[name]['default'] %}checked{% endif %}
+							/>
+							<label for="{{ name }}_{{ items['value'] }}"
+								class="card__redaction_radio_label"
+							>
+								{{ items['title'].encode('cp1251').decode('utf-8') }}
+							</label>
+						</div>
+						{% endfor %}
+					</div>
+					{% elif conf[name].get('type') == 'number' %}
+					<div class="card__redaction card__redaction_number-inp" data-name="{{ section_name }}">
+						<label class="card__redaction_label">
+							{{ conf[name]["title"].encode('cp1251').decode('utf-8') }}
+						</label>
+						<input type="number"
+							class="card__redaction_text card__redaction_text-number jsInputForm"
+							value="{{ value or conf[name]['default'] }}"
+							name="{{ name }}"
+							{% for attr, value in conf[name]['attr'].items() %}
+							{{attr}}="{{value}}"
+							{% endfor %}
+						/>
+					</div>
+					{% endif %}
+				{% endfor %}
 				{% endfor %}
 				<div class="card__readaction">
 					<h2 class="card__redaction_label">Обо мне</h2>
@@ -118,6 +147,8 @@
 <script src="{{ url_for('static', filename='lib/js/editorjslist.min.js') }}"></script>
 <script src="{{ url_for('static', filename='lib/js/editorjsheader.min.js') }}"></script>
 <script>
+	var global_edit_name = 'public_info';
+
 	var editor = new EditorJS({
 		holder: 'infoAboutAs',
 		minHeight: 100,
@@ -132,7 +163,11 @@
     		}
 		},
 		placeholder: 'Расскажите немного о себе',
-		data: {} 
+		data: {
+			{% if public_info['about_us'] %}
+				blocks: [{{ public_info['about_us'] }}]
+			{% endif %}
+		}
 	});
 </script>
 <script src="{{ url_for('static', filename='js/redactor_user.js') }}"></script>
