--- a/app/templates/base/modules/header.html
+++ b/app/templates/base/modules/header.html
@@ -24,7 +24,7 @@
             {% if name == 'admin' %}
                 <div class="header__link header__link_admin" id="iconAdmin">
                     <img
-                        src="{{url_for('static', filename='img/user.svg')}}"
+                        src="{{url_for('static', filename='img/user_active.svg')}}"
                         alt="Личный кабинет"
                         class="header__admin_image"
                     />
