--- a/app/src/styles/admin.less
+++ b/app/src/styles/admin.less
@@ -207,4 +207,20 @@
 			padding-left: 20px;
 		}
 	}
+
+	&_no-design {
+		background-color: transparent;
+		box-shadow: none;
+	}
+}
+
+.about-us-block {
+	width: 80%;
+	margin: auto;
+	margin-bottom: 20px;
+
+	&__text {
+		font-size: 16px;
+		line-height: 28px;
+	}
 }
