add change photo user and start redaction info-sections

--- a/app/src/styles/admin.less
+++ b/app/src/styles/admin.less
@@ -64,6 +64,9 @@
 		justify-content: center;
 		align-items: center;
 		border-radius: 10px;
+		border: none;
+		cursor: pointer;
+		outline: none;
 
 		&:hover {
 			background-color: @color_darkblue;
@@ -185,7 +188,7 @@
 	&_center {
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
+		justify-content: center;
 		align-items: center;
 	}
 
