--- a/app/src/styles/edit_profile.less
+++ b/app/src/styles/edit_profile.less
@@ -40,10 +40,15 @@
 	}
 
 	&__action-block {
+		display: flex;
 		margin-top: 20px;
 	}
 
 	&__bth {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
 		width: 150px;
 		height: 50px;
 		border: none;
