--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -11,7 +11,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0px 10em white inset !important;
-  -webkit-text-fill-color: yellow !important;
+  -webkit-text-fill-color: #222 !important;
 }
 
 input:-webkit-autofill,
