create front redaction sections user

--- a/app/src/styles/admin.less
+++ b/app/src/styles/admin.less
@@ -192,6 +192,12 @@
 		align-items: center;
 	}
 
+	&_align-center {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
 	&_margin {
 		margin-bottom: 20px;
 	}
