--- a/app/src/styles/edit_profile.less
+++ b/app/src/styles/edit_profile.less
@@ -53,7 +53,6 @@
 		height: 50px;
 		border: none;
 		outline: none;
-		cursor: pointer;
 		border-radius: 10px;
 		transition: .5s;
 		font-size: 18px;
@@ -207,6 +206,79 @@
 			margin-bottom: 50px;
 			padding: 10px;
 			box-sizing: border-box;
+		}
+	}
+}
+
+.section {
+	&__header {
+		background-color: #eee;
+		border-radius: 10px 10px 0 0;
+		position: relative;
+		height: 50px;
+
+		&_action {
+			position: absolute;
+			right: 10px;
+			top: 4px;
+			display: flex;
+		}
+
+		&_bth {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			cursor: pointer;
+			width: 130px;
+			height: 40px;
+			border: none;
+			outline: none;
+			border-radius: 10px;
+			transition: .5s;
+			font-size: 16px;
+			margin-right: 5px;
+			transition: .5s;
+			opacity: .5;
+
+			&:hover {
+				opacity: 1;
+				background-color: #aaa;
+				color: #fff;
+			}
+		}
+	}
+
+	&__title {
+		text-align: center;
+		font-size: 22px;
+		font-weight: bold;
+		line-height: 50px;
+		color: #222;
+	}
+
+	&__body {
+		padding: 30px;
+		box-sizing: border-box;
+	}
+}
+
+.section-body {
+
+	&__title {
+		font-size: 22px;
+		margin-bottom: 10px;
+
+		&_center {
+			text-align: center;
+		}
+	}
+
+	&__text {
+		font-size: 16px;
+		line-height: 30px;
+
+		&_center {
+			text-align: center;
 		}
 	}
 }
